<resources>
    <string name="app_name">"Cryptarch's Archive"</string>
    <string name="action_settings">Settings</string>
    <string name="grimoire_card_image">Grimoire Card image</string>
    <string name="card_name_unavailable">(Card name unavailable)</string>
    <string name="no_quote_available">(Card quote unavailable)</string>
    <string name="no_reference_available">(Card reference unavailable)</string>
    <string name="card_text_unavailable">(Card text unavailable)</string>
    <string name="header_text_unavailable">(Header text unavailable)</string>
    <string name="no_text_available">(Card text unavailable)</string>
    <string name="guardian_grimoire_section_image">Guardian Grimoire Section Image</string>
    <string name="guardian">GUARDIAN</string>
    <string name="inventory_grimoire_section_image">Inventory Grimoire Section Image</string>
    <string name="inventory">INVENTORY</string>
    <string name="allies_grimoire_section_image">Allies Grimoire Section Image</string>
    <string name="allies">ALLIES</string>
    <string name="enemies_grimoire_section_image">Enemies Grimoire Section Image</string>
    <string name="enemies">ENEMIES</string>
    <string name="places_grimoire_section_image">Places Grimoire Section Image</string>
    <string name="places">PLACES</string>
    <string name="activities_grimoire_section_image">Activities Grimoire Section Image</string>
    <string name="activities">ACTIVITIES</string>
    <string name="lore_book_icon">Lore Book Icon</string>
    <string name="lore_book_name_unavailable">(Book name unavailable)</string>
    <string name="lore_entry_title_unavailable">(Entry title unavailable)</string>
    <string name="lore_entry_text_unavailable">(Entry text unavailable)</string>
    <string name="lore_book_header_icon">Lore Book Header Icon</string>
    <string name="the_light_image_button">The Light Image Button</string>
    <string name="the_light">The Light</string>
    <string name="dusk_and_dawn_image_button">Dusk and Dawn Image Button</string>
    <string name="dusk_and_dawn">Dusk and Dawn</string>
    <string name="the_darkness_image_button">The Darkness Image Button</string>
    <string name="the_darkness">The Darkness</string>
    <string name="cryptarch_s_archive_s_splash_screen">\'Cryptarch\'s Archive\'\'s splash screen</string>
    <string name="cryptarch_s_archive_splash_screen">Cryptarch\'s Archive splash screen</string>
    <string name="lore_background">Lore background</string>
    <string name="archive">ARCHIVE</string>
    <string name="mute_music">Mute music</string>
    <string name="select_for_destiny_1_lore">PRESS FOR DESTINY 1 LORE</string>
    <string name="select_for_destiny_2_lore">PRESS FOR DESTINY 2 LORE</string>
    <string name="click_to_view_destiny_1_lore">View Destiny 1 Lore</string>
    <string name="destiny_1_menu_background">Destiny 1 menu background</string>
    <string name="destiny_2_menu_background">Destiny 2 menu background</string>
    <string name="click_to_view_destiny_2_lore">View Destiny 2 Lore</string>
    <string name="change_theme">Change theme</string>
    <string name="switch_to_destiny_1_menu">Switch to Destiny 1 menu</string>
    <string name="switch_to_destiny_2_menu">Switch to Destiny 2 menu</string>
</resources>
