<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivityD1">

    <ImageView
        android:id="@+id/d1menubackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:contentDescription="@string/destiny_1_menu_background"
        android:scaleType="centerCrop"
        android:src="@drawable/d1menuvanilla" />

    <LinearLayout
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/grimorieButton"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:background="@drawable/buttonroundedimportant"
            android:padding="5dp"
            android:text="@string/click_to_view_destiny_1_lore"
            android:textColor="#000"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/d1menubackground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/destiny1to2Button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:background="@drawable/buttonroundedimportant"
            android:padding="5dp"
            android:text="@string/switch_to_destiny_2_menu"
            android:textColor="#000"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/d1menubackground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/d1ThemeButton"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:background="@drawable/buttonroundedheader"
            android:padding="5dp"
            android:text="@string/change_theme"
            android:textColor="#000"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/muteButton"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:background="@drawable/borderbuttonmute"
            android:padding="5dp"
            android:text="@string/mute_music"
            android:textColor="#FFF"
            android:textSize="12sp" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>