<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColour"
    tools:context="robertianburns.cryptarchsarchive.GrimoireMainmenuActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:shrinkColumns="*"
            android:stretchColumns="*">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                    <ImageButton
                        android:id="@+id/guardianImageButton"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:adjustViewBounds="true"
                        android:background="@color/backgroundColour"
                        android:contentDescription="@string/guardian_grimoire_section_image"
                        android:cropToPadding="false"
                        android:scaleType="fitCenter"
                        android:src="@drawable/guardian"
                        android:tag="guardian" />

                    <TextView
                        android:id="@+id/guardianImageText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@id/guardianImageButton"
                        android:layout_centerInParent="false"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="false"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="sans-serif-light"
                        android:padding="5dp"
                        android:singleLine="true"
                        android:text="@string/guardian"
                        android:textAlignment="center"
                        android:textColor="@color/textColour"
                        android:textSize="24sp" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                    <ImageButton
                        android:id="@+id/inventoryImageButton"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:adjustViewBounds="true"
                        android:background="@color/backgroundColour"
                        android:contentDescription="@string/inventory_grimoire_section_image"
                        android:cropToPadding="false"
                        android:scaleType="fitCenter"
                        android:src="@drawable/guardian"
                        android:tag="inventory" />

                    <TextView
                        android:id="@+id/inventoryImageText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@id/inventoryImageButton"
                        android:layout_centerInParent="false"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="false"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="sans-serif-light"
                        android:padding="5dp"
                        android:singleLine="true"
                        android:text="@string/inventory"
                        android:textAlignment="center"
                        android:textColor="@color/textColour"
                        android:textSize="24sp" />

                </RelativeLayout>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                    <ImageButton
                        android:id="@+id/alliesImageButton"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:adjustViewBounds="true"
                        android:background="@color/backgroundColour"
                        android:contentDescription="@string/allies_grimoire_section_image"
                        android:cropToPadding="false"
                        android:scaleType="fitCenter"
                        android:src="@drawable/allies"
                        android:tag="allies" />

                    <TextView
                        android:id="@+id/alliesImageText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@id/alliesImageButton"
                        android:layout_centerInParent="false"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="false"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="sans-serif-light"
                        android:padding="5dp"
                        android:singleLine="true"
                        android:text="@string/allies"
                        android:textAlignment="center"
                        android:textColor="@color/textColour"
                        android:textSize="24sp" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                    <ImageButton
                        android:id="@+id/enemiesImageButton"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:adjustViewBounds="true"
                        android:background="@color/backgroundColour"
                        android:contentDescription="@string/enemies_grimoire_section_image"
                        android:cropToPadding="false"
                        android:scaleType="fitCenter"
                        android:src="@drawable/enemies"
                        android:tag="enemies" />

                    <TextView
                        android:id="@+id/enemiesImageText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@id/enemiesImageButton"
                        android:layout_centerInParent="false"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="false"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="sans-serif-light"
                        android:padding="5dp"
                        android:singleLine="true"
                        android:text="@string/enemies"
                        android:textAlignment="center"
                        android:textColor="@color/textColour"
                        android:textSize="24sp" />

                </RelativeLayout>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                    <ImageButton
                        android:id="@+id/placesImageButton"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:adjustViewBounds="true"
                        android:background="@color/backgroundColour"
                        android:contentDescription="@string/places_grimoire_section_image"
                        android:cropToPadding="false"
                        android:scaleType="fitCenter"
                        android:src="@drawable/places"
                        android:tag="places" />

                    <TextView
                        android:id="@+id/placesImageText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@id/placesImageButton"
                        android:layout_centerInParent="false"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="false"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="sans-serif-light"
                        android:padding="5dp"
                        android:singleLine="true"
                        android:text="@string/places"
                        android:textAlignment="center"
                        android:textColor="@color/textColour"
                        android:textSize="24sp" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                    <ImageButton
                        android:id="@+id/activitiesImageButton"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:adjustViewBounds="true"
                        android:background="@color/backgroundColour"
                        android:contentDescription="@string/activities_grimoire_section_image"
                        android:cropToPadding="false"
                        android:scaleType="fitCenter"
                        android:src="@drawable/guardian"
                        android:tag="activities" />

                    <TextView
                        android:id="@+id/activitiesImageText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@id/activitiesImageButton"
                        android:layout_centerInParent="false"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="false"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="sans-serif-light"
                        android:padding="5dp"
                        android:singleLine="true"
                        android:text="@string/activities"
                        android:textAlignment="center"
                        android:textColor="@color/textColour"
                        android:textSize="24sp" />

                </RelativeLayout>

            </TableRow>

        </TableLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>