<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColour"
    tools:context=".GrimoireCardActivity">

    <ImageView
        android:id="@+id/loreBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:contentDescription="Grimoire Card background"
        android:scaleType="fitXY"
        android:src="@drawable/d1background" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bottomborder"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/buttonsquareheader"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/cardImage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/grimoire_card_image"
                        android:padding="5dp"
                        android:src="@drawable/c700470"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/cardName"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:fontFamily="sans-serif-light"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/card_name_unavailable"
                        android:textAlignment="center"
                        android:textColor="@color/textColour"
                        android:textStyle="bold"
                        app:autoSizeMaxTextSize="40sp"
                        app:autoSizeMinTextSize="26sp"
                        app:autoSizeStepGranularity="1sp"
                        app:autoSizeTextType="uniform" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginBottom="5dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/cardQuote"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-light"
                            android:padding="5dp"
                            android:text="@string/no_quote_available"
                            android:textColor="@color/textColour"
                            android:textSize="18sp"
                            android:textStyle="bold|italic" />

                        <TextView
                            android:id="@+id/cardQuoteReference"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:fontFamily="sans-serif-light"
                            android:padding="5dp"
                            android:text="@string/no_reference_available"
                            android:textAlignment="viewEnd"
                            android:textColor="@color/textColour"
                            android:textSize="18sp"
                            android:textStyle="bold|italic" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/cardDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="300dp"
                android:fontFamily="sans-serif-light"
                android:padding="5dp"
                android:text="@string/card_text_unavailable"
                android:textColor="@color/textColour"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>